--- a/kafka-consumer/src/main/resources/application.properties
+++ b/kafka-consumer/src/main/resources/application.properties
@@ -1,27 +1,16 @@
 server.port=9001
-spring.application.name=kafka-producer
+spring.application.name=kafka-consumer
 
-#============== kafka ===================
-# Ö¸¶¨kafka serverµÄµØÖ·£¬¼¯ÈºÅä¶à¸ö£¬ÖĞ¼ä£¬¶ººÅ¸ô¿ª
-spring.kafka.bootstrap-servers=127.0.0.1:9092
+#=============== consumer  =======================
+# æŒ‡å®šé»˜è®¤æ¶ˆè´¹è€…group id --> ç”±äºåœ¨kafkaä¸­ï¼ŒåŒä¸€ç»„ä¸­çš„consumerä¸ä¼šè¯»å–åˆ°åŒä¸€ä¸ªæ¶ˆæ¯ï¼Œä¾é groud.idè®¾ç½®ç»„å
+spring.kafka.consumer.group-id=testGroup
+# smallestå’Œlargestæ‰æœ‰æ•ˆï¼Œå¦‚æœsmallesté‡æ–°0å¼€å§‹è¯»å–ï¼Œå¦‚æœæ˜¯largestä»logfileçš„offsetè¯»å–ã€‚ä¸€èˆ¬æƒ…å†µä¸‹æˆ‘ä»¬éƒ½æ˜¯è®¾ç½®smallest
+spring.kafka.consumer.auto-offset-reset=earliest
+# enable.auto.commit:true --> è®¾ç½®è‡ªåŠ¨æäº¤offset
+spring.kafka.consumer.enable-auto-commit=true
+#å¦‚æœ'enable.auto.commit'ä¸ºtrueï¼Œåˆ™æ¶ˆè´¹è€…åç§»è‡ªåŠ¨æäº¤ç»™Kafkaçš„é¢‘ç‡ï¼ˆä»¥æ¯«ç§’ä¸ºå•ä½ï¼‰ï¼Œé»˜è®¤å€¼ä¸º5000ã€‚
+spring.kafka.consumer.auto-commit-interval=100
 
-#=============== provider  =======================
-# Ğ´ÈëÊ§°ÜÊ±£¬ÖØÊÔ´ÎÊı¡£µ±leader½ÚµãÊ§Ğ§£¬Ò»¸örepli½Úµã»áÌæ´ú³ÉÎªleader½Úµã£¬´ËÊ±¿ÉÄÜ³öÏÖĞ´ÈëÊ§°Ü£¬
-# µ±retrisÎª0Ê±£¬produce²»»áÖØ¸´¡£retirsÖØ·¢£¬´ËÊ±repli½ÚµãÍêÈ«³ÉÎªleader½Úµã£¬²»»á²úÉúÏûÏ¢¶ªÊ§¡£
-spring.kafka.producer.retries=0
-# Ã¿´ÎÅúÁ¿·¢ËÍÏûÏ¢µÄÊıÁ¿,produce»ıÀÛµ½Ò»¶¨Êı¾İ£¬Ò»´Î·¢ËÍ
-spring.kafka.producer.batch-size=16384
-# produce»ıÀÛÊı¾İÒ»´Î·¢ËÍ£¬»º´æ´óĞ¡´ïµ½buffer.memory¾Í·¢ËÍÊı¾İ
-spring.kafka.producer.buffer-memory=33554432
-
-#procedureÒªÇóleaderÔÚ¿¼ÂÇÍê³ÉÇëÇóÖ®Ç°ÊÕµ½µÄÈ·ÈÏÊı£¬ÓÃÓÚ¿ØÖÆ·¢ËÍ¼ÇÂ¼ÔÚ·şÎñ¶ËµÄ³Ö¾Ã»¯£¬ÆäÖµ¿ÉÒÔÎªÈçÏÂ£º
-#acks = 0 Èç¹ûÉèÖÃÎªÁã£¬ÔòÉú²úÕß½«²»»áµÈ´ıÀ´×Ô·şÎñÆ÷µÄÈÎºÎÈ·ÈÏ£¬¸Ã¼ÇÂ¼½«Á¢¼´Ìí¼Óµ½Ì×½Ó×Ö»º³åÇø²¢ÊÓÎªÒÑ·¢ËÍ¡£ÔÚÕâÖÖÇé¿öÏÂ£¬ÎŞ·¨±£Ö¤·şÎñÆ÷ÒÑÊÕµ½¼ÇÂ¼£¬²¢ÇÒÖØÊÔÅäÖÃ½«²»»áÉúĞ§£¨ÒòÎª¿Í»§¶ËÍ¨³£²»»áÖªµÀÈÎºÎ¹ÊÕÏ£©£¬ÎªÃ¿Ìõ¼ÇÂ¼·µ»ØµÄÆ«ÒÆÁ¿Ê¼ÖÕÉèÖÃÎª-1¡£
-#acks = 1 ÕâÒâÎ¶×Åleader»á½«¼ÇÂ¼Ğ´ÈëÆä±¾µØÈÕÖ¾£¬µ«ÎŞĞèµÈ´ıËùÓĞ¸±±¾·şÎñÆ÷µÄÍêÈ«È·ÈÏ¼´¿É×ö³ö»ØÓ¦£¬ÔÚÕâÖÖÇé¿öÏÂ£¬Èç¹ûleaderÔÚÈ·ÈÏ¼ÇÂ¼ºóÁ¢¼´Ê§°Ü£¬µ«ÔÚ½«Êı¾İ¸´ÖÆµ½ËùÓĞµÄ¸±±¾·şÎñÆ÷Ö®Ç°£¬Ôò¼ÇÂ¼½«»á¶ªÊ§¡£
-#acks = all ÕâÒâÎ¶×Åleader½«µÈ´ıÍêÕûµÄÍ¬²½¸±±¾¼¯ÒÔÈ·ÈÏ¼ÇÂ¼£¬Õâ±£Ö¤ÁËÖ»ÒªÖÁÉÙÒ»¸öÍ¬²½¸±±¾·şÎñÆ÷ÈÔÈ»´æ»î£¬¼ÇÂ¼¾Í²»»á¶ªÊ§£¬ÕâÊÇ×îÇ¿ÓĞÁ¦µÄ±£Ö¤£¬ÕâÏàµ±ÓÚacks = -1µÄÉèÖÃ¡£
-#¿ÉÒÔÉèÖÃµÄÖµÎª£ºall, -1, 0, 1
-spring.kafka.producer.acks=1
-
-# Ö¸¶¨ÏûÏ¢keyºÍÏûÏ¢ÌåµÄ±à½âÂë·½Ê½
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
+# æŒ‡å®šæ¶ˆæ¯keyå’Œæ¶ˆæ¯ä½“çš„ç¼–è§£ç æ–¹å¼
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
